in fact, it is .ui-autocomplete with the z-index issue

--- a/assets/stylesheets/keyboard_shortcuts.css
+++ b/assets/stylesheets/keyboard_shortcuts.css
@@ -65,7 +65,6 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-  z-index: 1001;
 }
 
 #dialog ul.ks-list li {
@@ -80,4 +79,8 @@
 
 #dialog ul.ks-list li a.current {
   color: #000;
+}
+
+.ui-autocomplete {
+  z-index: 1001;
 }
